--- a/src/public/sass/helpers/_utilities.scss
+++ b/src/public/sass/helpers/_utilities.scss
@@ -85,6 +85,16 @@
 ------------------------*/
 
 /*-----------------------
+  @DIMENSIONS
+------------------------*/
+%full-width {
+    width: 100%;
+}
+.full-width {
+    @extend %full-width;
+}
+
+/*-----------------------
   @CLEARFIX
 ------------------------*/
 %cf {
