--- a/src/public/sass/layout/_header.scss
+++ b/src/public/sass/layout/_header.scss
@@ -1,29 +1,25 @@
-.brand {
-    float: left;
-    /*height: $masthead-height;*/
-    line-height: $masthead-height;
+.branding {
+    background: #fff;
+    border-bottom: $masthead-border solid $color-secondary;
+    margin-left: auto;
+    margin-right: auto;
+    /*max-width: $page-max-width;*/
+    padding: 10px 0;
     text-align: center;
-    vertical-align: middle;
     width: 100%;
 
-    @include bp($mobile-landscape) {
-        padding-right: 0;
-        width: 200px;
-    }
-
-    @include bp($switch-nav-large) {
-        width: 21.795%;
-    }
-
-    img {
-        /*max-height: 70px;*/
-        max-width: 250px;
-        width: 100%;
-    }
-
-    div {
-        @extend %vc;
+    .brand {
         display: inline-block;
+        /*height: $masthead-height;*/
+
+        img {
+            max-width: 250px;
+            width: 100%;
+        }
+        div {
+            display: inline-block;
+            vertical-align: middle;
+        }
     }
 }
 
@@ -31,7 +27,7 @@
     @extend %cf;
     background: #fff;
     border-bottom: $masthead-border solid $color-secondary;
-    /*height: $masthead-height + $masthead-border;*/
+    height: $masthead-mobile;
     margin-left: auto;
     margin-right: auto;
     max-width: $page-max-width;
@@ -43,6 +39,17 @@
             background: $color-grey-dark;
         }
     }
+    &.is-fixed {
+        box-shadow: 0 1px 7px 0 rgba(50,50,50,.25);
+        left: auto;
+        position: fixed;
+        right: auto;
+        top: 0;
+    }
+
+    @include bp($foundation-med) {
+        height: $masthead-height + $masthead-border;
+    }
 }
 
 .masthead__section {
@@ -53,19 +60,15 @@
             left: 8px;
             right: 188px;
         }
-        width: 100%;
+        position: static;
 
         @include bp($mobile-landscape) {
-            padding-left: 1.3%;
+            padding-left: 3.5%;
             padding-right: 220px;
         }
 
         @include bp($switch-nav-medium) {
             padding-right: 0;
-            width: 670px;
-        }
-        @include bp($switch-nav-large) {
-            width: 78%;
         }
     }
     &--small {
@@ -87,7 +90,7 @@
             right: 1px solid $color-secondary;
         }
         position: absolute;
-        right: 60px;
+        right: 80px;
         top: 0;
 
         .nav-header--is-open & {
@@ -96,8 +99,8 @@
             }
         }
 
-        @include bp($mobile-landscape) {
-            right: 80px;
+        @include bp($foundation-small, $tablet) {
+            left: 0;
         }
         @include bp($switch-nav-medium) {
             position: relative;
@@ -116,29 +119,57 @@
 }
 
 .masthead-wrapper {
-    /*height: $masthead-height + $masthead-border;*/
+    /*height: $masthead-height + $masthead-border;
     position: fixed;
-    top: 0;
+    top: 0;*/
     width: 100%;
     z-index: 100;
+}
+
+.mobile-branding {
+    min-height: 78px;
+    padding: {
+        left: 8px;
+        right: 188px;
+    }
+    text-align: left;
+    width: 100%;
+
+    .brand {
+
+        img {
+            max-width: 240px;
+            width: 100%
+        }
+    }
+
+    @include bp($mobile-landscape) {
+        padding-right: 228px
+    }
+    @include bp($tablet) {
+        display: none;
+    }
 }
 
 .nav-header-trigger {
     @extend %centered;
     background: transparent !important;
+    border-left: 1px solid $color-secondary;
     color: $color-primary;
     display: block;
-    height: $masthead-height;
+    height: $masthead-mobile;
     padding: 0;
     position: absolute;
     right: 0;
     top: 0;
-    width: 60px;
+    width: 80px;
 
-    @include bp($mobile-landscape) {
-        width: 80px;
+    @include bp($foundation-med) {
+        height: $masthead-height;
     }
-
+    @include bp($tablet) {
+        border: none;
+    }
     @include bp($switch-nav-medium) {
         float: right;
         margin-right: 10px;
@@ -167,7 +198,7 @@
 .nav-header__link {
     color: $color-grey-dark;
     display: inline-block;
-    line-height: $masthead-height;
+    line-height: $masthead-mobile;
 
     &:hover {
         text-decoration: none;
@@ -178,11 +209,15 @@
     &.last {
         padding-right: 0;
     }
+
+    @include bp($foundation-med) {
+        line-height: $masthead-height;
+    }
 }
 
 .phone {
     display: inline-block;
-    height: $masthead-height;
+    /*height: $masthead-height;*/
     margin: 0 auto;
     width: 100%;
 
