--- a/src/public/sass/modules/_statements.scss
+++ b/src/public/sass/modules/_statements.scss
@@ -5,6 +5,17 @@
         right: 10%;
     }
 
+    h2 {
+        padding: {
+            left: 10%;
+            right: 10%;
+        }
+    }
+    p {
+        color: $color-default-light;
+        font-family: $font-family-display;
+    }
+
     @include bp($foundation-small, $mobile-landscape) {
         padding: {
             left: 5%;
@@ -29,10 +40,6 @@
 
     a:hover {
         text-decoration: none;
-    }
-    p {
-        color: $color-default-light;
-        font-family: $font-family-display;
     }
 }
 
