--- a/src/public/sass/pages/_category.scss
+++ b/src/public/sass/pages/_category.scss
@@ -1,3 +1,11 @@
+.product-row-container {
+    h3 {
+        margin-bottom: 5%;
+    }
+}
+.product-row-container:first-child {
+    border-top: 0;
+}
 .product-row {
     color: $color-default-light;
 
