--- a/src/public/sass/styles.scss
+++ b/src/public/sass/styles.scss
@@ -13,7 +13,7 @@
 @import "base/elements";
 
 @import "layout/page";
-@import "layout/header2";
+@import "layout/header";
 @import "layout/footer";
 
 @import "pages/about";
@@ -28,17 +28,19 @@
 
 @import "modules/accessories";
 @import "modules/arrows";
-@import "modules/hero";
 @import "modules/breadcrumbs";
 @import "modules/buttons";
+@import "modules/contact-modal";
+@import "modules/discover-more";
 @import "modules/forms";
+@import "modules/gallery";
+@import "modules/hero";
 @import "modules/icons";
-@import "modules/statements";
+@import "modules/incentives";
 @import "modules/nav-header";
 @import "modules/nav-secondary";
-@import "modules/welcome";
-@import "modules/discover-more";
-@import "modules/testimonials";
-@import "modules/gallery";
-@import "modules/slick";
 @import "modules/products";
+@import "modules/slick";
+@import "modules/statements";
+@import "modules/testimonials";
+@import "modules/welcome";
