--- a/src/public/sass/pages/_category.scss
+++ b/src/public/sass/pages/_category.scss
@@ -39,24 +39,26 @@
 .hero--residential {
     background-image: url('../images/residential-hero.jpg');
     background-size: cover;
-    /*height: 900px;*/
 
     .card {
         width: 300px;
 
-        @include bp($foundation-small, $mobile-landscape) {
+        @include bp($foundation-small, $foundation-med) {
             background: $color-grey-light-bg;
             padding: 10% 10% 8%;
             width: 100%;
         }
     }
 
-    @include bp($foundation-small, $mobile-landscape) {
+    @include bp($foundation-small, $foundation-med) {
         padding: 0;
 
         .row, .columns {
             float: none;
             padding: 0;
         }
+    }
+    @include bp($foundation-med, $tablet) {
+        background-position-x: 10px !important;
     }
 }
