--- a/src/public/sass/styles.scss
+++ b/src/public/sass/styles.scss
@@ -37,6 +37,7 @@
 @import "modules/hero";
 @import "modules/icons";
 @import "modules/incentives";
+@import "modules/map";
 @import "modules/nav-header";
 @import "modules/nav-secondary";
 @import "modules/products";
