--- a/src/public/sass/modules/_welcome.scss
+++ b/src/public/sass/modules/_welcome.scss
@@ -86,7 +86,7 @@
         @include bp($foundation-large) {
             border-top: 0;
             height: 220px;
-            width: 47%;
+            width: 48%;
         }
     }
 
@@ -98,7 +98,7 @@
         width: 50%;
 
         .cta {
-            margin-left: 6%;
+            margin-left: 4%;
         }
     }
     @include bp($my-large) {
@@ -118,11 +118,18 @@
         text-shadow: 1px 1px 3px rgba(50,50,50,1);
     }
 
-    @include bp($foundation-small, $foundation-med) {
+    @include bp($foundation-small, $mobile-landscape) {
         padding: 18% 10% 64%;
 
         h1 {
             font-size: 1.75em;
+        }
+    }
+    @include bp($mobile-landscape, $foundation-med) {
+        padding: 28% 10% 55%;
+
+        h1 {
+            font-size: 2.5em;
         }
     }
     @include bp($foundation-large, $my-large) {
